--- a/css/style.css
+++ b/css/style.css
@@ -161,7 +161,6 @@ html {
   -webkit-text-size-adjust: 100%;
   font-size: 16px;
   overflow-x: hidden;
-  width: 100vw;
 }
 
 body {
